--- a/Module-1-Webpack/package.json
+++ b/Module-1-Webpack/package.json
@@ -4,7 +4,9 @@
   "description": "learnAngular",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,9 +20,17 @@
   "homepage": "https://github.com/ArlinskiEV/AngularMentoringProgram#readme",
   "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "clean-webpack-plugin": "^0.1.19",
     "eslint": "^4.19.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.9.0",
-    "webpack": "^4.1.1"
+    "html-webpack-plugin": "^3.0.6",
+    "webpack": "^4.1.1",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-merge": "^4.1.2"
   }
 }
