--- a/angular-starter/package.json
+++ b/angular-starter/package.json
@@ -85,16 +85,19 @@
     "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/platform-server": "^5.2.9",
-    "@angular/router": "^5.2.9",
+    "@angular/animations": "^5.2.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/platform-server": "^5.2.0",
+    "@angular/router": "^5.2.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^5.2.0",
+    "@ngrx/store-devtools": "^3.2.4",
     "core-js": "^2.4.1",
     "http-server": "^0.11.1",
     "ie-shim": "^0.1.0",
@@ -104,8 +107,8 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.7.1",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/language-service": "^5.2.9",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
     "@compodoc/compodoc": "^1.0.7",
     "@ngtools/webpack": "1.10.0",
     "@types/hammerjs": "^2.0.35",
